* Correct Checkbox column alignments  * Separate files which can be imported, and those that cannot ("do not meet guidelines")  * Add a red backcolour to files which "do not meet guidelines"  * introduce a "Base Directory" functionality, imported files must exist within the dir/subdirs.  * Remove JS references (dont have any..)  * Introduce a user_allowed() functionality to allow site admins to limit use to certain users or those with a certain cap.  * Add Options page link to plugin actions links.  * A few bug fixes to image imports  * Switch from "Exclude from gallery" to "Include in gallery"  * Correct error return when cannot create a path on the server  * When file exists within uploads folders, AND the file time is of the same period, base the time details off the filename  * QuickJump improvements
git-svn-id: http://plugins.svn.wordpress.org/add-from-server/trunk@342806 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/add-from-server.css
+++ b/add-from-server.css
@@ -1,3 +1,15 @@
 .frmsvr_wrap {
 	margin: 1em;
 }
+.frmsvr_wrap .widefat tbody th.check-column {
+	padding-bottom: 0px;
+}
+.frmsvr_wrap .widefat tbody tr.doesnt-meet-guidelines {
+	background-color: #FFE8EE;
+}
+.frmsvr_wrap fieldset {
+	padding: 5px;
+	border: 1px #ebebeb solid;
+	margin-bottom: 0.7em;
+	margin-top: 0.7em;
+}
